@@ -11,8 +11,14 @@ details. */
 #ifndef _SYS_SYSMACROS_H
 #define _SYS_SYSMACROS_H
 
+#ifdef __CYGWIN_USE_BIG_TYPES__
+#define major(dev) ((int)(((dev) >> 16) & 0xffff))
+#define minor(dev) ((int)((dev) & 0xffff))
+#define makedev(major, minor) (((major) << 16) | ((minor) & 0xffff))
+#else
 #define major(dev) ((int)(((dev) >> 8) & 0xff))
 #define minor(dev) ((int)((dev) & 0xff))
-#define makedev(major, minor) (((major) << 8) | (minor))
+#define makedev(major, minor) (((major) << 8) | ((minor) & 0xff))
+#endif
 
 #endif /* _SYS_SYSMACROS_H */
